@@ -8,20 +8,20 @@ import org.codehaus.jackson.JsonProcessingException;
 import org.springframework.stereotype.Service;
 
 import com.openclassrooms.safetyNet.dao.FireStationDao;
-import com.openclassrooms.safetyNet.dao.FireStationDaoImpl;
+import com.openclassrooms.safetyNet.dao.impl.FireStationDaoImpl;
 import com.openclassrooms.safetyNet.model.FireStation;
 import com.openclassrooms.safetyNet.service.StationService;
 
 @Service("StationService")
 public class StationServiceImpl implements StationService {
-	private FireStationDao fireStationDao = new FireStationDaoImpl("src/main/resources/data.json");
+    private FireStationDao fireStationDao = new FireStationDaoImpl("src/main/resources/data.json");
 
-	public List<String> listStationAddresses(String station)
-			throws ClassNotFoundException, JsonProcessingException, IOException {
-		List<FireStation> fireStations = fireStationDao.list().stream().filter(o -> (o.getStation().equals(station)))
-				.toList();
-		List<String> stationAddresses = fireStations.stream().map(o -> o.getAddress()).collect(Collectors.toList());
-		return stationAddresses;
-	}
+    public List<String> listStationAddresses(String station)
+            throws ClassNotFoundException, JsonProcessingException, IOException {
+        List<FireStation> fireStations = fireStationDao.list().stream().filter(o -> (o.getStation().equals(station)))
+                .toList();
+        List<String> stationAddresses = fireStations.stream().map(o -> o.getAddress()).collect(Collectors.toList());
+        return stationAddresses;
+    }
 
 }
